# tcc-decom

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: 2.1-Dados-dos-Inventores-versão5.docx  2.2-Relatorio-Descritivo.docx  2.3-Reivindicacoes.docx  2.4-Desenhos-ou-Fotografias.docx  2.5-Declaracao_individual_para_fins_deposito_de_patente-Modelo-Patente.docx  CDCO_planilhaFinanceira_v2.2.xls  DEDC_faq.md  Declaração-de-Inexistência-de-Conflito-de-Interesses.doc  Justificativa-Cotitularidade.doc  Modelo-Chamada-Interna-Bolsistas.doc  Modelo-de-Plano-de-Trabalho-CDCO.doc  ModeloAcordoPesquisaNRepasse.doc  ModeloAcordoPesquisaRepasse.doc  ModeloContratoServioTcnicoApoio.doc  ModeloContratoServioTcnicoNApoio.doc  Plano-de-Trabalho-de-Discente-de-Extensão.doc  Plano-de-trabalho-natureza-especial-CDCO.doc  Relatório-de-Atividades-de-Discente-de-Extensão.doc  Relatório-de-Cumprimento-de-Objeto-CDCO.doc  Relatório-final-natureza-especial-CDCO.doc  Termo-Compromisso-Bolsista-Externo.docx  Termo-Compromisso-Proposta-Empresa-Patrocinio.docx  Termo-de-Anuência-do-Colaborador-Externo-Remunerado.doc  Termo-de-Anuência-do-Colaborador-Externo.doc
embeddings/index/: index.faiss  index.pkl
src/: config.py
src/ingestion/: document_loaders.py  ingest.py
src/retrieval/: config.py  llm_config.py  retrieve.py
src/utils/: logger.py
